--- a/ms/ms.Rmd
+++ b/ms/ms.Rmd
@@ -55,11 +55,11 @@ With these as our primary motivations, we describe a simplified approach to bioe
 
 # Model description
 
-In this dynamical system, both the coral host and algal symbiont acquire and use carbon and nitrogen to construct biomass. The symbiont fixes carbon through photosynthesis and receives nitrogen shared by the host, while the host acquires nitrogen from the environment and receives carbon shared by the symbiont. A graphical representation of the model is presented in Fig. 1, and each model flux and parameter is defined in Tables 1 and 2, respectively. We use C-moles (C-mol) as the unit of biomass for consistency with the rigorous mass balance of DEB theory: 1 C-mol is equivalent to the amount of biomass containing 1 mole of carbon atoms. Host biomass (expressed as C-mol H), symbiont biomass (expressed as C-mol S), and prey biomass (expressed as C-mol X) have fixed, but different, molar N:C ratios (Table 2). Biomass is produced from carbon and nitrogen by synthesizing units (SU), which are mathematical specifications of the formation of a product from two substrates; we use the "parallel complementary" formulation of @Kooijman:2010vd (page 105, Fig. 3.7) to specify these fluxes. The two state variables of this system are symbiont biomass and coral biomass; because resources are acquired proportionally to surface area, and surface area is proportional to volume, biomass increases exponentially during growth (indeed, corals grow exponentially [@Bak:1976bv]). 
+In this dynamical system, both the coral host and algal symbiont acquire and use carbon and nitrogen to construct biomass. The symbiont fixes carbon through photosynthesis and receives nitrogen shared by the host, while the host acquires nitrogen from the environment and receives carbon shared by the symbiont. A graphical representation of the model is presented in Fig. 1, and each model flux and parameter is defined in Tables 1 and 2, respectively. We use C-moles (C-mol) as the unit of biomass for consistency with the rigorous mass balance of DEB theory: 1 C-mol is equivalent to the amount of biomass containing 1 mole of carbon atoms. Host biomass (expressed as C-mol H), symbiont biomass (expressed as C-mol S), and prey biomass (expressed as C-mol X) have fixed, but different, molar N:C ratios (Table 2), consistent with the assumption of strong homeostasis in DEB theory [@Kooijman:2010vd]. Biomass is produced from carbon and nitrogen by parallel complementary synthesizing units (SUs) -- mathematical specifications of the formation of a product by a metabolic network processing two complementary substrates in parallel (@Kooijman:2010vd, p. 105, Fig. 3.7). The two state variables in the model are symbiont biomass and coral biomass; because resources are acquired proportionally to surface area, and surface area is proportional to volume (corals are V1-morphs in a DEB context (@Kooijman:2010vd, p. 122)), biomass increases exponentially during growth (indeed, corals grow exponentially [@Bak:1976bv]). 
 
 Environmental stress is implemented in the form of photooxidative stress, which is thought to be a primary trigger of coral bleaching [@Lesser:1997p3587; @Weis:2008p944; @Wooldridge:2009p7807]. To simulate bleaching, we model the absorption and quenching of light energy by photochemistry and non-photochemical quenching, and the responses that occur (i.e., photoinhibition, photodamage, and symbiont loss) when these quenching capacities are overwhelmed. While bleaching in response to high light alone has been observed experimentally [@Schutter:2011ie; @Downs:2013kc], mass coral bleaching events occur concurrently with high temperature [@HoeghGuldberg:1999p4222]. Thus, it is important to justify our consideration of light as the primary stressor. In reality, light and temperature interact synergistically [@Coles:1978p1124; @Jones:1998p3572], and in fact, any stressor that disrupts the quenching of light energy may lead to bleaching [@Wooldridge:2010p7809; @Baker:2015kp]. This is because the proximate cause of photo-oxidative stress is excess excitation energy, but the upstream events that lead to this situation may be diverse. Indeed, elevated temperature may inhibit Rubisco functioning [@Jones:1998p3572] and the repair of the D1 protein in photosystem II [@Warner:1999p4239], which reduces the capacity of photochemical quenching and leads to an excess of light energy. In this way, elevated temperature serves to reduce the threshold above which light stresses the system [@HoeghGuldberg:1999p4222]; importantly, light is still the proximate stressor. Therefore, we omitted temperature from the model to maintain a desired level of simplicity, while still allowing photooxidative stress and bleaching to be simulated with biological realism in response to light.  
 
-Table 1. Model fluxes (mass-specific). Units are explained in the text.
+Table 1. Model fluxes (mass-specific). Units are explained in the text. (Abbreviations: CCMs=carbon concentrating mechanisms; NPQ=non-photochemical quenching; ROS=reactive oxygen species)
 
 | Symbol  | Description                          | Units                 | Eq. no. |
 | ------- | ------------------------------------ | --------------------- | ------- |
@@ -83,7 +83,7 @@ Table 1. Model fluxes (mass-specific). Units are explained in the text.
 | $\rho_C$  | Fixed carbon shared with host          | mol C C-mol S^-1^ d^-1^ | 21 |
 | $j_{ST}$  | Symbiont biomass turnover rate         | C-mol S C-mol S^-1^ d^-1^| 22 |
 
-Table 2. Model parameters (units explained in the text). Justification and/or derivation of each parameter value along with supporting references are provided in the Supplementary Information.
+Table 2. Model parameters (units explained in the text). Justification and/or derivation of each parameter value along with supporting references are provided in the Supplementary Information. (Abbreviations: CCMs=carbon concentrating mechanisms; NPQ=non-photochemical quenching; ROS=reactive oxygen species; DIN=dissolved inorganic nitrogen)
 
 | Symbol  | Description                          | Units               | Value     |
 | ------- | ------------------------------------ | ------------------- | --------- |
@@ -132,7 +132,7 @@ Additionally, the coral animal acquires dissolved inorganic nitrogen (DIN) from 
 
 \begin{equation} j_N = {{j_{Nm} \cdot N} \over {N + K_N}} \end{equation}
 
-Coral biomass formation is then specified by a parallel complementary SU (formula in Fig. 3.7 of @Kooijman:2010vd]) that combines carbon and nitrogen, according to:
+Coral biomass formation is then specified by a parallel complementary SU (formula in Fig. 3.7 of @Kooijman:2010vd]). The general form of this equation is $(m^{-1} + x^{-1} + y^{-1} - (x + y)^{-1})^{-1}$, where $m$ is the maximum production flux, and $x$ and $y$ are the input fluxes of the two substrates. Coral biomass is thus produced from carbon and nitrogen according to:
 
 \begin{equation} j_{HG} = \bigg({1 \over j_{HGm}} + {1 \over {y_{C}\rho_C{S \over H} + j_X}} + {1 \over {(j_N + n_{NX}j_X + r_{NH})n_{NH}^{-1}}} - {1 \over {y_{C}{\rho_C{S \over H} + j_X} + (j_N + n_{NX}j_X + r_{NH})n_{NH}^{-1}}}\bigg)^{-1} \end{equation}
 
@@ -162,7 +162,7 @@ This flux, $j_{eC}$, is assumed to be available to the host as a respiratory sub
 
 ## *Symbiodinium* fluxes
 
-The symbiont produces fixed carbon through photosynthesis, a process represented here by a single SU with two substrates: light (photons) and inorganic carbon (CO~2~). The amount of light absorbed by the symbiont depends on the scalar irradiance at the site of light absorption, which is modified substantially relative to external downwelling irradiance owing to multiple scattering by the coral skeleton and self-shading by surrounding symbionts [@Enriquez:2005p142; @Marcelino:2013hz]. We used data from @Marcelino:2013hz to empirically derive an amplification factor, $A$, indicating the ratio of internal scalar irradiance to external downwelling irradiance as a function of symbiont density (S:H biomass), which is specified as:
+The symbiont produces fixed carbon through photosynthesis, a process represented here by a single SU with two substrates: light (photons) and inorganic carbon (CO~2~). The amount of light absorbed by the symbiont depends on the scalar irradiance at the site of light absorption, which is modified substantially relative to external downwelling irradiance owing to multiple scattering by the coral skeleton and self-shading by surrounding symbionts [@Enriquez:2005p142; @Marcelino:2013hz]. We used skeletal light amplification measurements from @Marcelino:2013hz to empirically derive an amplification factor, $A$ (Figure S1), indicating the ratio of internal scalar irradiance to external downwelling irradiance as a function of symbiont density (S:H biomass), which is specified as:
 
 \begin{equation} A = 1.26 + 1.39 \cdot \exp(-6.48 \cdot {S \over H}) \end{equation}
 
@@ -218,7 +218,7 @@ Symbiont biomass turnover includes a component of constant turnover specified by
 
 This second component of symbiont biomass loss represents both photodamage and/or symbiont expulsion (i.e., bleaching), both of which occur in response to high levels of ROS production. The parameter $b$ is included to scale biomass loss due to bleaching in response to ROS. 
 
-[^2]: Note that recycling of symbiont biomass turnover ($rNS$ and $rCS$) only occurs based on the maintenance component of turnover (i.e., $j_{ST}^0$), and not the photodamage/bleaching component, as this loss represents biomass that is expelled from the host.
+[^2]: Note that recycling of symbiont biomass turnover ($r_{NS}$ and $r_{CS}$) only occurs based on the maintenance component of turnover (i.e., $j_{ST}^0$), and not the photodamage/bleaching component, as this loss represents biomass that is expelled from the host.
 [^3]: See footnote 2.
 
 To aid in visualizing model results, we calculated values to indicate the degree to which product formation at an SU was limited by availability of either of its two substrates using the formula
@@ -256,7 +256,7 @@ The incorporation of photooxidative stress in the model sets an upper limit to t
 
 The values used for each parameter in the model (Table 2) are derived from relevant literature (see Supplementary Information). Here we evaluate the sensitivity of the model to changes in these parameter values, which also serves to demonstrate the behavior of the dynamical system. We calculated fractional change in steady state values in response to fractional changes in parameter values, relative to their default values, under environmental conditions typical of coral reefs.
 
-![Sensitivity analysis. Plots show the fractional change in steady state values of growth (solid lines) and S:H biomass (dashed lines) in response to fractional changes in default parameter values (see Table 2 for default values). Parameters are grouped by the processes in which they are involved. This sensitivity analysis was conducted at conditions typical for coral reef environments: low DIN (1e-7 M) and intermediate light (15 mol photons m^-2^ d^-2^), with prey density set to zero. Sensitivity analyses conducted other environmental conditions are presented in Figs S3-S7.](../img/Fig4.png)
+![Sensitivity analysis. Plots show the fractional change in steady state values of growth rate (solid lines) and S:H biomass (dashed lines) in response to fractional changes in default parameter values (see Table 2 for default values). Parameters are grouped by the processes in which they are involved. This sensitivity analysis was conducted at conditions typical for coral reef environments: low DIN (1e-7 M) and intermediate light (15 mol photons m^-2^ d^-2^), with prey density set to zero. Sensitivity analyses conducted other environmental conditions are presented in Figs S3-S7.](../img/Fig4.png)
 
 Overall, relative changes in the steady state of the system are less than the equivalent relative change in parameter value. However, changes in certain parameter values have more significant impacts: increasing $j_{Nm}$ or decreasing $K_N$ both dramatically increase host growth (Fig. 4), demonstrating the strong nitrogen-limitation that characterizes these symbioses. The parameter $\bar{a}^*$ has a strong impact on S:H biomass ratios (Fig. 4) since this parameter determines the amount of light absorbed by symbionts, with lower values increasing light-limitation. Increasing the maximum growth and turnover rates have the expected effects of increasing and decreasing growth, respectively. Parameters relating to photooxidative stress and bleaching have little impact under low nutrients and intermediate light (Fig. 4), but have larger impacts under higher light (e.g., Fig. S6). Sensitivity analyses conducted under different combinations of external light and nutrients are presented in Figs. S3-S7.
 
@@ -270,7 +270,7 @@ Symbiont densities and coral growth rates are known to vary seasonally, represen
 
 ![Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 44 and 20 mol photons m^-2^ d^-1^, corresponding to those measured by @Stimson:1997p3837. The dynamic behavior of symbiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under high nutrients (15.14 $\mu$M N; dashed lines) relative to low nutrients (0.14 $\mu$M N; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-6 CmolX L^-1^.](../img/Fig5.png)
 
-The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer[^4], consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone may drive seasonal dynamics in the ways discussed[^5], temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the model's ability to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
+The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer[^4], consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone may drive seasonal dynamics in the ways discussed[^5], temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism. Seasonal changes in nutrients associated with fertilization use and runoff during growing seasons may also impact these dynamics. Thus, the relative magnitude of fluctuation in temperature, light, and nutrients may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here in response to light (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the model's ability to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
 
 [^4]: at the light levels indicated in @Stimson:1997p3837. Note that if light levels were reduced throughout the year (e.g. for a coral at greater depth) such that light did not cause photo-oxidative stress in summer but became limiting to photosynthesis in winter, the S:H ratio would still increase in winter, but growth would decrease; the latter scenario is predicted both by the present model as well as that of @Muller:2009io, since photo-oxidative stress does not become relevant.
 [^5]: See footnote 4.
