Fig8 -> Fig9, FigS9 -> Fig8

--- a/ms/ms.Rmd
+++ b/ms/ms.Rmd
@@ -289,13 +289,15 @@ The importance of host CCM activity establishes significant interactive roles fo
 
 ![Bleaching with interactive factors. Simulations of high light stress (sinusoid with maximum=48 mol ph m^-2^ d^-1^) under default environmental conditions (solid line; DIN=1e-7 mol N L^-1^; prey=2e-7 C-molX L^-1^), or with elevated feeding (dashed line; prey=1e-6 C-molX L^-1^), or elevated nutrients (dotted line; DIN=4e-6 mol N L^-1^). Initial symbiont biomass was set to the steady state for each set of starting conditions, with all other parameters at default values.](../img/Fig7.png)
 
-Since bleaching can be understood as a transition from a nitrogen-limited state with high S:H biomass to a carbon-limited state with low S:H biomass, induced by an external stressor, recovery can be understood as a switch back to the nitrogen-limited state once the external stressor is alleviated. In natural settings, this typically occurs through seasonal declines in temperature and light. However, hysteresis associated with the system's alternate stable states indicates that the symbiosis cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2). This is because under the same external conditions, a bleached coral with low S:H biomass (relative to a healthy coral with high S:H biomass) is characterized by greater light amplification and weaker CCM activity, which enhance photooxidative stress and serve to maintain the carbon-limited state. In order for the system to recover, the stressor must be reduced enough such that photooxidative stress ceases and translocation of carbon from symbiont to host is resumed. Once this occurs, the host can energize its CCMs, which further enhances carbon fixation and accelerates the system back toward a nitrogen-limited state, indicative of recovery. The conditions under which recovery can occur -- which determine the magnitude of hysteresis (Fig. S9) -- depend on the relative abundance of nitrogen and carbon in the environment. Higher food levels, representing a non-autotrophic carbon source for the host, make it easier for the host to overcome carbon-limitation, thus providing a potential mechanism underlying observations that feeding aids recovery from bleaching [@Grottoli:2006p3692; @Connolly:2012ep]. Conversely, high external DIN impedes the re-establishment of nitrogen-limitation, making recovery from bleaching more difficult (i.e., narrowing the sets of conditions under which recovery is possible).
+Since bleaching can be understood as a transition from a nitrogen-limited state with high S:H biomass to a carbon-limited state with low S:H biomass, induced by an external stressor, recovery can be understood as a switch back to the nitrogen-limited state once the external stressor is alleviated. In natural settings, this typically occurs through seasonal declines in temperature and light. However, hysteresis associated with the system's alternate stable states indicates that the symbiosis cannot recover along the same trajectory it followed during bleaching; indeed, the stressor must be alleviated *below* the threshold that initially caused bleaching in order for the system to recover (Fig. 2). This is because under the same external conditions, a bleached coral with low S:H biomass (relative to a healthy coral with high S:H biomass) is characterized by greater light amplification and weaker CCM activity, which enhance photooxidative stress and serve to maintain the carbon-limited state. In order for the system to recover, the stressor must be reduced enough such that photooxidative stress ceases and translocation of carbon from symbiont to host is resumed. Once this occurs, the host can energize its CCMs, which further enhances carbon fixation and accelerates the system back toward a nitrogen-limited state, indicative of recovery. The conditions under which recovery can occur -- which determine the magnitude of hysteresis (Fig. 8) -- depend on the relative abundance of nitrogen and carbon in the environment. Higher food levels, representing a non-autotrophic carbon source for the host, make it easier for the host to overcome carbon-limitation (Fig. 8A, D), thus providing a potential mechanism underlying observations that feeding aids recovery from bleaching [@Grottoli:2006p3692; @Connolly:2012ep]. Conversely, high external DIN impedes the re-establishment of nitrogen-limitation, making recovery from bleaching more difficult (i.e., narrowing - or eliminating - conditions under which recovery is possible, Fig. 8C).
 
-Dynamic simulations of recovery reveal another interesting behavior of the system: under some conditions, an 'overshoot' occurs in which S:H biomass temporarily increases beyond the ratio maintained in the 'healthy' state, before returning to stabilize at this value (Fig. 8). In fact, unusually high symbiont densities have been observed following bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model reveals the dynamics of this 'overshoot' as follows: as symbionts repopulate the host, photosynthesis becomes increasingly CO~2~-limited due to weak CCM activity of the carbon-limited host. Thus, although symbiont growth is not yet carbon-limited, a growing symbiont population has less and less excess carbon (per symbiont) to share, and is thus moving toward carbon-limitation. Meanwhile, because S:H biomass is increasing, the host receives more and more carbon per unit host biomass, and is thus moving away from carbon-limitation. If the host overcomes carbon-limitation *before* the symbiont reaches it, then the system rapidly transitions to the nitrogen-limited state and the S:H ratio stabilizes without an overshoot (Fig. 8A). However, if the symbiont becomes carbon-limited first (Fig. 8B, 8C), then carbon translocation per symbiont declines further and photosynthesis becomes more CO~2~-limited, which maintains carbon-limitation of the host. In this situation, continued growth of less and less productive symbionts drives S:H biomass to a much higher level before the host finally overcomes carbon-limitation. At this point, representing the peak of the overshoot, the transition to nitrogen-limitation finally takes place and the S:H biomass ratio declines and stabilizes as positive growth is resumed.
+![Hysteresis under different nutrient and feeding regimes. Steady state S:H biomass ratios in constant environments with (A) low DIN (1e-7 M) and low food (2e-7 M), (B) low DIN (1e-7 M) and no food, (C) high DIN (2e-6 M) and low food (2e-7 M), and (D) high DIN (2e-6 M) and high food (4e-7 M). In each panel, steady states are shown starting from both high initial S:H biomass (1, i.e. healthy corals - closed circles) and low initial initial S:H biomass (0.0001, i.e. bleached corals - open circles). Points are colored according to whether the host exhibits positive (black) or negative (red) growth at steady state.](../img/Fig8.png)
 
-Whether this 'overshoot' occurs or not is determined by the relative availability of carbon and nitrogen to the host -- any factor that enhances carbon-limitation of host growth (e.g. high DIN and/or low feeding) therefore magnifies the overshoot and prolongs the dysfunctional, carbon-limited state of the symbiosis (Fig. 8). On the other hand, factors that favor nitrogen-limitation, such as low external DIN and/or high feeding rates, will accelerate the re-establishment of nitrogen-limitation and prevent an overshoot from occurring at all. While many scenarios are possible under different environmental conditions, we illustrate the general effects of varying N and C availability on recovery from bleaching with a series of simulations that vary the N:C ratio of host's heterotrophic food source (Fig. 8A-C): lower N:C ratios (effectively representing lower DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid recovery, while higher N:C ratios (effectively representing higher DIN and/or lower heterotrophy) favor carbon-limitation and prolonged recovery with a larger overshoot in S:H biomass.
+Dynamic simulations of recovery reveal another interesting behavior of the system: under some conditions, an 'overshoot' occurs in which S:H biomass temporarily increases beyond the ratio maintained in the 'healthy' state, before returning to stabilize at this value (Fig. 9). In fact, unusually high symbiont densities have been observed following bleaching in both experimental [@Cunning:2015ja] and field studies [@Kemp:2014ug], and have been interpreted as a potential 'disequilibrium in host-symbiont regulation' [@Kemp:2014ug]. The model reveals the dynamics of this 'overshoot' as follows: as symbionts repopulate the host, photosynthesis becomes increasingly CO~2~-limited due to weak CCM activity of the carbon-limited host. Thus, although symbiont growth is not yet carbon-limited, a growing symbiont population has less and less excess carbon (per symbiont) to share, and is thus moving toward carbon-limitation. Meanwhile, because S:H biomass is increasing, the host receives more and more carbon per unit host biomass, and is thus moving away from carbon-limitation. If the host overcomes carbon-limitation *before* the symbiont reaches it, then the system rapidly transitions to the nitrogen-limited state and the S:H ratio stabilizes without an overshoot (Fig. 9A). However, if the symbiont becomes carbon-limited first (Fig. 9B, 9C), then carbon translocation per symbiont declines further and photosynthesis becomes more CO~2~-limited, which maintains carbon-limitation of the host. In this situation, continued growth of less and less productive symbionts drives S:H biomass to a much higher level before the host finally overcomes carbon-limitation. At this point, representing the peak of the overshoot, the transition to nitrogen-limitation finally takes place and the S:H biomass ratio declines and stabilizes as positive growth is resumed.
 
-![Recovery from bleaching with varying N:C availability (A: N:C=0.100; B: N:C=0.175; C: N:C=0.220). Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation. Substrate limitation coefficients were calculated using Eq. 23. All simulations were run with default parameters (except varying $n_{NX}$), with L=20 mol photons m^2^ d^-1^, DIN=1e-7 mol N L^-1^, prey=1e-7 CmolX L^-1^, and initial S:H biomass=0.001.](../img/Fig8.png)
+Whether this 'overshoot' occurs or not is determined by the relative availability of carbon and nitrogen to the host -- any factor that enhances carbon-limitation of host growth (e.g. high DIN and/or low feeding) therefore magnifies the overshoot and prolongs the dysfunctional, carbon-limited state of the symbiosis (Fig. 9). On the other hand, factors that favor nitrogen-limitation, such as low external DIN and/or high feeding rates, will accelerate the re-establishment of nitrogen-limitation and prevent an overshoot from occurring at all. While many scenarios are possible under different environmental conditions, we illustrate the general effects of varying N and C availability on recovery from bleaching with a series of simulations that vary the N:C ratio of host's heterotrophic food source (Fig. 9A-C): lower N:C ratios (effectively representing lower DIN and/or higher heterotrophy) favor nitrogen-limitation and more rapid recovery, while higher N:C ratios (effectively representing higher DIN and/or lower heterotrophy) favor carbon-limitation and prolonged recovery with a larger overshoot in S:H biomass.
+
+![Recovery from bleaching with varying N:C availability (A: N:C=0.100; B: N:C=0.175; C: N:C=0.220). Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation. Substrate limitation coefficients were calculated using Eq. 23. All simulations were run with default parameters (except varying $n_{NX}$), with L=20 mol photons m^2^ d^-1^, DIN=1e-7 mol N L^-1^, prey=1e-7 CmolX L^-1^, and initial S:H biomass=0.001.](../img/Fig9.png)
 
 These dynamics reveal that the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when positive growth rates are resumed. A high S:H biomass ratio alone does not necessarily indicate that a 'healthy' state has been reached, since the carbon-limited state may still persist (e.g. Fig. 8B, 8C). This could explain why corals that have recovered their symbiont populations after bleaching may still exhibit energetic deficits and physiological impacts, possibly for months to years [@Levitan:2014et, @Hughes:2013hd]). These findings suggest that host acquisition of carbon from a source other than the symbiont may be extremely important for the system to recover from bleaching. Indeed, host feeding has been shown to promote a more rapid return to pre-bleaching levels of key physiological parameters in recovering corals [@Connolly:2012ep]. Additional carbon sources for the host, such as direct uptake of dissolved organic carbon [@Levas:2015ic], may also promote more rapid recovery from a bleached state.
 
